fix: align header links

--- a/src/views/Header/Header.module.css
+++ b/src/views/Header/Header.module.css
@@ -1,5 +1,5 @@
 * {
-  /* border: 0.5px solid red; */
+  border: 0.5px solid red;
   box-sizing: border-box;
 }
 .Container {
@@ -11,7 +11,6 @@
   font-family: "Poppins", sans-serif;
 }
 .Link {
-  width: 70px;
   text-align: left;
 }
 
