--- a/src/views/Posts/Posts.module.css
+++ b/src/views/Posts/Posts.module.css
@@ -9,7 +9,7 @@
   align-items: center;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   grid-gap: 1rem;
-  padding: 4rem;
+  padding: 4rem 0;
   margin: 0 auto;
   width: max-content;
 }
